# On-Premise-Sync-Agent

./: .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  README.md  config_server.py  docker-compose.yaml  functions.py  integration_mapping.py  pyproject.toml  sqliteDB_setup.py  start_sync_agent_and_webpage.sh  sync_agent.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint-prod.sh  entrypoint.sh
.github/workflows/: lint-test.yml  release-please.yml
data_integrations/: mssql.py  mysql.py  postgresql.py  template.py
data_integrations/integration_configs/: config_abstract.py
data_integrations/models/: general.py
default_configs/: default.sync_agent.json  dev.sync_agent.json
envs/: dev.env.json  stage.env.json
versioning/: update_version.py
