[tool.poetry]
name = "resplendent-sync-agent"
version = "0.8.0"
description = "Sync data from data sources to Resplendent Data"
authors = ["Malachi Bazar <mal@resplendentdata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
aio-pika = "*"
pandas = "==2.1.4"
pbkdf2 = "*"
pycryptodome = "*"
python-rapidjson = "*"
websockets = "*"
xmltodict = "*"
requests = "*"
psutil = "*"
dash = "*"
dash-bootstrap-components = "*"
google-api-core = "*"
google-api-python-client = "*"
google-auth = "*"
google-auth-httplib2 = "*"
google-auth-oauthlib = "*"
aiohttp = "*"
pika = "*"
pyarrow = "*"
connectorx = "==0.3.2a2"
pymongo = { version = "==4.1.1", extras = ["srv"] }
psycopg2-binary = "*"
pydantic = "2.5.3"
gunicorn = "*"
pydantic-collections = "*"
pyodbc = "*"
mysqlclient = "*"
ordered-set = "*"
oauthlib = "*"
numpy = "*"
sqlalchemy = "~=1.4"
python-dateutil = "*"
gspread = "*"
oauth2client = "*"
python-quickbooks = "^0.9.5"
intuit-oauth = "^1.2.4"
sentry-sdk = "^1.39.1"
asyncpg = "^0.29.0"
polars-lts-cpu = "==0.19.19"
gspread-dataframe = "^3.3.1"


[tool.poetry.group.dev.dependencies]
black = "*"
bandit = "*"
mypy = "*"
types-requests = "*"
ipykernel = "*"
sqlalchemy2-stubs = "*"
pipx = "*"
cookiecutter = "*"
datamodel-code-generator = "^0.21.5"
watchdog = "^3.0.0"
py-spy = "^0.3.14"
memory-profiler = "^0.61.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
